--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -659,7 +659,13 @@ used to filter out events that are not interesting to a particular analysis and
 then performing the analysis in the next tool.
 
 \subsection{RoadRunner Synchronization Models}
-{\color{blue}\lipsum[1]}
+
+In RoadRunner, all threads of the program under analysis generate events. The
+events are also handled by the same thread that generated them which means that
+several event handlers may be running concurrently. Tools written for RoadRunner
+must provide internal synchronization to ensure that no concurrency-related
+errors occur in the tool itself. RoadRunner contains an option to serialize all
+events. In this mode, there is only one event handler running at a time.
 
 \subsection{Instrumentation Performed by RoadRunner}
 
@@ -808,15 +814,16 @@ atomicity violations \cite{contracts}.
 
 \emph{Contracts for concurrency} \cite{FITPUB10817},
 \cite{DBLP:journals/corr/SousaDFL15}, are a case of a software protocol that
-expresses access restrictions in a concurrent setting. In its basic form, it
-specifies sequences of methods that must be executed atomically. The contracts
-can be extended with parameters to reflect the data flow between the methods (so
+expresses access restrictions in a concurrent setting. In its basic form, they
+specify sequences of methods that must be executed atomically. The contracts can
+be extended with parameters to reflect the data flow between the methods (so
 that only methods manipulating the same data must be executed atomically).
 Another extension adds so-called \emph{spoilers} (so that given sequence must be
 executed atomically only with respect to only certain sequences). Both
-extensions can be combined \cite{contracts}. This chapter defines basic
-contracts, as well as both extensions to them. Then a method for dynamic
-validation of contracts for concurrency is presented.
+extensions can be combined. This chapter defines basic contracts, as well as
+both extensions to them. Then a method for dynamic validation of contracts for
+concurrency is presented. The analyzer, implemented in this thesis, is based on
+this method.
 
 \section{Basic Contracts}
 \label{basicContracts}
@@ -885,7 +892,7 @@ basic contract is called a \emph{target} and is assigned a set of so-called
 \emph{spoilers}. A spoiler is a set of method sequences that may violate its
 target.
 
-Consider clause $\varrho_1$ from the example in section \ref{basicContracts}. If
+Consider clause $\varrho_1$ from the example in Section \ref{basicContracts}. If
 the element that was put into the map is concurrently removed or updated before
 the \texttt{get} call, a contract violation should be detected.  However,
 calling \texttt{contains} or \texttt{get} on the element will not affect the
@@ -938,8 +945,8 @@ This section provides an overview of the method.
 
 \subsection{Multi-threaded Program Traces}
 
-In the context of the dynamic contract validation, multi-threaded program
-\emph{trace} consists of events of the following types:
+In the context of the dynamic on-the-fly contract validation, multi-threaded
+\emph{program trace} consists of events of the following types:
 \begin{itemize}
     \item thread forking or joining another thread,
     \item thread entering or exiting a method,
@@ -979,7 +986,7 @@ denote the first and last events of a spoiler, respectively.
 \subsection{Contract Violation}
 
 A contract is violated when there is a target instance that is fully interleaved
-with a spoiler instance. The interleaving is defined using a
+with a spoiler instance from another thread. The interleaving is defined using a
 \emph{happens-before} relation, which is in the context of contracts defined as
 follows \cite{contracts}. A \emph{happens-before relation} $\prec_{hb}$ over a
 trace $\tau = e_1 \ldots e_n \in \mathbb{E}^+$ is the smallest transitively
@@ -1004,12 +1011,20 @@ execution trace, all target and spoiler instances can be detected, the
 happens-before relation can be deduced, and all contracts can be easily checked
 for violations. The trace, however, can get large and make this approach
 unpractical. For this reason, several optimizations are introduced in
-\cite{contracts}, which are presented in the next section.
+\cite{contracts}, which are presented in the next section. An example of a
+program trace containing a contract violation is shown in Figure \ref{traces}.
 
-\todo{examples of traces}
-{\color{blue}\lipsum[2]}
+\begin{figure}[hbt]
+    \begin{center}
+        \label{traces}
+        \input{figures/traces.tex}
+        \caption{\todo{}}
+    \end{center}
+\end{figure}
 
 \subsection{Vector Clocks}
+
+\cite{fasttrack}
 
 \todo{definition, usage, examples}
 {\color{blue}\lipsum[1-3]}
@@ -1044,13 +1059,10 @@ violate the target. When a spoiler instance ends, target instances from the
 trace window are checked if they are violated by the spoiler. At method exit,
 target and spoiler instances are also discarded when no longer needed.
 
-\todo{more detailed description, examples}
-{\color{blue}\lipsum[1-3]}
-
 \section{Previous Work}
 
 \todo{m. janousek, anaconda, results}
-{\color{blue}\lipsum[1-3]}
+{\color{blue}\lipsum[1-2]}
 
 
 
@@ -1283,14 +1295,6 @@ classes (such as \texttt{Integer}) by calling the \texttt{equals()} method, even
 if the instance was created by the program under analysis. This may or may not
 be the intended behavior and the user of the analyzer should be aware of this.
 
-\subsection{Instrumenting Only Contract Methods}
-\todo{For dynamic analysis of contracts for concurrency, only a subset of all
-events is required. The RoadRunner framework should be configured or modified to
-instrument only the necessary actions of the program under analysis. Event types
-that are not used at all, such as memory accesses, should not be instrumented.
-Method entries and exits should be instrumented only in case the method is part
-of a contract.}
-
 \section{Contracts Definition and Parsing}
 \label{contracts}
 
@@ -1302,17 +1306,19 @@ it is represented in the analyzer.
 
 The analyzer takes a contract definition as a parameter. At the top level, the
 definition contains pairs of targets and spoilers. Each target and spoiler is
-represented by a regular expression over methods. Each method is parametrized,
-including arguments, return value, and the object it is called upon
-(\texttt{this}).
+represented by a regular expression over methods. The on-the-fly dynamic
+analysis described in Chapter \ref{chThree} expects several spoilers to be
+assigned to a single target. In practice, the spoilers can be merged into a
+single regular expression so that each target has exactly one spoiler. Each
+method is parametrized, including arguments, return value, and the object it is
+called upon (\texttt{this}).
 
-To specify methods unambiguously, method names are fully qualified (for example
-\texttt{java/lang/Object.toString}). Java allows method overloading, so to
-distinguish methods with the same name but different number and type of their
+To specify methods unambiguously, method names must be fully qualified (for
+example \texttt{java/lang/Object.toString}). Java allows method overloading, so
+to distinguish methods with the same name but different number and type of their
 parameters, the contract definition contains the method descriptor (for example
-\texttt{(Ljava/lang/Object;)V}. \todo{It should be possible to include a
-constructor in a contract.} Each method in a contract definition consists of the
-enclosing class, the method name, the method descriptor, and a list of
+\texttt{(Ljava/lang/Object;)V}. Each method in a contract definition consists of
+the enclosing class, the method name, the method descriptor, and a list of
 meta-variables. For example:
 
 \begin{lstlisting}
@@ -1429,7 +1435,10 @@ The \texttt{ContractAnalyzer} class is created and called by the
 \texttt{ContractTool} class which directly uses the RoadRunner API. The
 \texttt{ContractTool} class is described in Section \ref{contractTool}.
 
-\todo{synchronization of the tool itself}
+The interface of the analyzer is made up of synchronized methods to ensure
+proper synchronization. This approach is not the same as the event serialization
+mentioned in Chapter \ref{chTwo}. All events that are not calling analyzer's
+methods will still be concurrent.
 
 \subsection{Tracking of Target and Spoiler Instances}
 
@@ -1708,10 +1717,10 @@ option. RoadRunner allows tools to easily add new command-line options. The
 options are then automatically parsed and made available for the tool to use.
 
 The file with contract definition is then scanned using a lexical analyzer and
-parsed using a LALR parser \todo{explain LALR}. The lexical analyzer is
-generated using JFlex and the parser is generated by CUP. The primary reason for
-choosing these generators was that both of them were already used in RoadRunner,
-so no new dependency was added to the project.
+parsed using a LALR parser. The lexical analyzer is generated using JFlex and
+the parser is generated by CUP. The primary reason for choosing these generators
+was that both of them were already used in RoadRunner, so no new dependency was
+added to the project.
 
 The lexical analyzer recognizes various symbols for delimiting the methods in a
 contract but it does not split class names and method descriptors, they are
@@ -1742,17 +1751,18 @@ adds new fields to the \texttt{MethodEvent} class which holds information about
 a method invocation. These changes were taken without modifications from
 \cite{janousek}.
 
-The main logic is contained in class \todo{break it}
-\texttt{rr.instrument.classes.SyncAndMethodThunkInserter}, in method
-\texttt{createMethodThunk}. The method creates a new method that will generate
-enter and exit events and call the original method. In the beginning, the values
-of method parameters need to be stored, at the end, the return value must be
-stored. The initial implementation described in \cite{janousek} contained
-several issues. Static methods could not be instrumented because of incorrect
-indexing of local variables. Methods with parameters of type \texttt{double} or
-\texttt{long} could not be instrumented, because the implementation was not
-taking into account that these values occupy two local variables. These issues
-have been fixed and an extensive test suite was created to verify the final
+The main instrumentation logic is contained in the
+\texttt{SyncAndMethodThunkInserter} class from the
+\texttt{rr.instrument.classes} package, in the \texttt{createMethodThunk}
+method. The method creates a new method that will generate enter and exit events
+and call the original method. In the beginning, the values of method parameters
+need to be stored, at the end, the return value must be stored. The initial
+implementation described in \cite{janousek} contained several issues. Static
+methods could not be instrumented because of incorrect indexing of local
+variables. Methods with parameters of type \texttt{double} or \texttt{long}
+could not be instrumented, because the implementation was not taking into
+account that these values occupy two local variables. These issues have been
+fixed and an extensive test suite was created to verify the final
 implementation.
 
 Each method is instrumented as follows. A new array of type \texttt{Object} is
