--- a/xzarsk03-contracts-for-concurrency-01-chapters.tex
+++ b/xzarsk03-contracts-for-concurrency-01-chapters.tex
@@ -1134,8 +1134,15 @@ The clocks are updated on the following actions:
 
 \section{Previous Work}
 
-\todo{m. janousek, anaconda, results}
-{\color{blue}\lipsum[1-2]}
+\todo{TODO}
+
+\begin{itemize}
+    \item \cite{janousek} - Java, RoadRunner, parametric contracts with spoilers
+    \item \cite{contracts} - C++, ANaConDA, parametric contracts with spoilers
+    \item \cite{FITPUB10817} - Java, IBM Concurrency Testing Tool, basic
+        contracts
+    \item \cite{DBLP:journals/corr/SousaDFL15} - Java, only static analysis
+\end{itemize}
 
 
 
