--- a/xzarsk03-contracts-for-concurrency-20-bibliography.bib
+++ b/xzarsk03-contracts-for-concurrency-20-bibliography.bib
@@ -157,7 +157,7 @@ series = {POPL '04}
     year = {2014},
     isbn = {013390590X},
     publisher = {Addison-Wesley Professional},
-    edition = {1st},
+    edition = {1},
     pages = {69-332}
 }
 
