--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -71,6 +71,8 @@
 \usepackage{mathabx}
 \usepackage{tikz}
 \usepackage{lipsum}
+\usepackage{tikz-uml}
+\usetikzlibrary{positioning}
 
 \usepackage{url}
 
